Closed Bug 1914556 Opened 1 year ago Closed 1 year ago

[loongarch][mips] Failed to build js (error: no matching constructor for initialization of 'LAtomicTypedArrayElementBinop64')

Categories

(Core :: JavaScript Engine: JIT, defect)

defect

Tracking

()

RESOLVED FIXED
131 Branch
Tracking Status
firefox131 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

Bug 1913947 changed some MIR lowering and codegen operations, which caused build issue on loongarch64 and mips64 platforms.

Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Pushed by andre.bargull@gmail.com: https://hg.mozilla.org/integration/autoland/rev/1bf36d18fced [loongarch][mips] Fix some variables' types. r=anba
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 131 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: