Bug 1914556 - [loongarch][mips] Fix some variables' types. r=anba

Differential Revision: https://phabricator.services.mozilla.com/D219944